--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <span>湿度：</span>
     <span id="humidity"></span>
     <span>%</span><br>
-    <span>風速</span>
+    <span>風速：</span>
     <span id="speed"></span>
     <span>m/s</span><br>
-    <span>天気</span>
+    <span>天気：</span>
     <span id="weather"></span>
     <div id="icon"><img id="img"></div>
     <script src="js/jquery-3.6.0.min.js"></script>
